<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <data>
        <variable
            name="mainActivityViewModel"
            type="com.example.internetspeedfinder.customViewModels.MainActivityViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTopHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMiddleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dimens_150dp"
            android:layout_height="@dimen/dimens_150dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineMiddleHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineTopHorizontal"
            app:srcCompat="@drawable/speed_test_img" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRoot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#FFF4F2F2"
            android:layout_margin="@dimen/dimens_32dp"
            app:cardElevation="@dimen/dimens_8dp"
            app:cardCornerRadius="@dimen/dimens_8dp"
            app:layout_constraintTop_toBottomOf="@id/guidelineMiddleHorizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <!--<androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimens_8dp"
                android:layout_margin="@dimen/dimens_16dp"
                android:orientation="vertical">
                <!-- start : CurrentSpeed-->
                <TextView
                    android:id="@+id/tvCurrentSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tvSmallHeader"
                    android:text="@string/current_speed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/tvCurrentSpeedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    style="@style/tvAnswerValue"
                    android:text="@={mainActivityViewModel.currentRecord}"
                    android:hint="@string/str_zero_speed"
                    app:layout_constraintTop_toBottomOf="@id/tvCurrentSpeed"
                    app:layout_constraintStart_toStartOf="@id/tvCurrentSpeed"
                    app:layout_constraintEnd_toEndOf="@id/tvCurrentSpeed"/>
                <!--android:text="@={mainActivityViewModel.currentRecord}"-->
                <!-- end : CurrentSpeed-->
                <!-- start : Mean speed-->
                <TextView
                    android:id="@+id/tvMeanSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mean_speed"
                    style="@style/tvSmallHeader"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentSpeedValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/tvMeanSpeedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    style="@style/tvAnswerValue"
                    android:text="@={mainActivityViewModel.meanRecord}"
                    android:hint="@string/str_zero_speed"
                    app:layout_constraintTop_toBottomOf="@id/tvMeanSpeed"
                    app:layout_constraintStart_toStartOf="@id/tvCurrentSpeed"
                    app:layout_constraintEnd_toEndOf="@id/tvCurrentSpeed"/>

                <!--android:text="@={mainActivityViewModel.meanRecord}"-->
                <!-- End : Mean Speed-->
                <!-- start : Maximum speed-->
                <TextView
                    android:id="@+id/tvMaximumSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tvSmallHeader"
                    android:text="@string/maximum_speed"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvMeanSpeedValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/tvMaximumSpeedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    style="@style/tvAnswerValue"
                    android:text="@={mainActivityViewModel.maxRecord}"
                    android:hint="@string/str_zero_speed"
                    app:layout_constraintTop_toBottomOf="@id/tvMaximumSpeed"
                    app:layout_constraintStart_toStartOf="@id/tvCurrentSpeed"
                    app:layout_constraintEnd_toEndOf="@id/tvCurrentSpeed"/>
                <!--android:text="@={mainActivityViewModel.maxRecord}"-->
                <!-- End : Maximum Speed-->
                <!-- start : Minimum speed-->
                <TextView
                    android:id="@+id/tvMinimumSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tvSmallHeader"
                    android:text="@string/minimum_speed"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvMaximumSpeedValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/tvMinimumSpeedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    style="@style/tvAnswerValue"
                    android:text="@={mainActivityViewModel.minRecord}"
                    android:hint="@string/str_zero_speed"
                    app:layout_constraintTop_toBottomOf="@id/tvMinimumSpeed"
                    app:layout_constraintStart_toStartOf="@id/tvCurrentSpeed"
                    app:layout_constraintEnd_toEndOf="@id/tvCurrentSpeed"/>
                <!--android:text="@={mainActivityViewModel.minRecord}"-->
                <!-- End : Minimum Speed-->
                <Button
                    android:id="@+id/btnCurrentSpeedPrint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/print"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
<!--                    android:onClick="@{()->mainActivityViewModel.SaveData()}"-->
                </Button>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--</androidx.core.widget.NestedScrollView>-->
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>